fix: spacing in the clients section

--- a/frontend/src/app/pages/home/components/clients/clients.component.scss
+++ b/frontend/src/app/pages/home/components/clients/clients.component.scss
@@ -1,13 +1,19 @@
+.testimonial-container {
+    display: flex;
+    justify-content: space-between;
+}
+
 .left-container {
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    padding: 0 0 0 60px;
 
     .quotation {
         width: 200px;
         height: 380px;
-        margin-top: 80px;
-        margin-left: 40px;
+        margin: 116.6px 0 0 -12.41px;
         color: #000000;
         font-family: 'Sohne' !important;
         font-size: 25rem;
@@ -19,8 +25,8 @@
         text-align: left;
         font-family: 'Sohne' !important;
         font-size: 2rem;
-        margin-left: 50px;
-        margin-bottom: 80px;
+        padding-right: 112.58px;
+        margin-bottom: 129.78px;
         color: #000000;
     }
 
@@ -28,7 +34,6 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        margin-left: 50px;
 
         .bar {
             width: 50px;
@@ -46,9 +51,13 @@
     }
 }
 
-h1 {
-    margin: 90px 0 100px;
-    height: 92px;
+.right-container {
+    width: 55%;
+
+    h1 {
+        margin: 81.9px 0 98.5px;
+        height: 92px;
+    }
 }
 
 
@@ -57,15 +66,15 @@ h1 {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 144.3px;
 
     .footer-button {
         display: flex;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
         color: #0e0e01;
-        margin-left: 120px;
-        margin-right: 15px;
+        padding: 0;
+        margin: 0 9px 1.7px 120px;
         border: none;
         background-color: transparent;
         font-family: 'Sohne-500' !important;
@@ -73,9 +82,10 @@ h1 {
 
         i {
             font-size: 2rem;
-            margin-left: 5px;
+            margin-left: 0.5px;
             padding-top: 5px;
             transition: transform 0.3s ease;
+            position: relative;
         }
 
         &:hover {
